plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.13' // 🔥 Повертаємо
}

group 'andrew_volostnykh'
version '1.0-SNAPSHOT'

repositories {
	mavenCentral()
}

ext {
	junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

application {
	mainClass = 'andrew_volostnykh.webrunner.WebRunnerApplication'
}

javafx {
	version = '21'
	modules = [
			'javafx.controls',
			'javafx.fxml'
	]
}

dependencies {
	implementation 'org.controlsfx:controlsfx:11.2.1'

	implementation 'org.kordamp.ikonli:ikonli-core:12.3.1'
	implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
	implementation 'org.kordamp.ikonli:ikonli-materialdesign-pack:12.3.1'
	implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
	implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
	implementation 'org.jfxtras:jmetro:11.6.15'

	implementation 'org.fxmisc.richtext:richtextfx:0.11.0'

	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'

	// Graal Polyglot
	implementation "org.graalvm.polyglot:polyglot:24.1.0"
	implementation "org.graalvm.polyglot:js:24.1.0"

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	testCompileOnly 'org.projectlombok:lombok:1.18.42'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

	testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
	useJUnitPlatform()
}

run {
	// GraalJS рекомендація
	jvmArgs = [
			'-Dpolyglot.engine.WarnInterpreterOnly=false',
			'--add-opens=java.base/java.lang=ALL-UNNAMED'
	]
}
